# Python-Web---HW13.2

./: .wvenv  pyproject.toml
hw_project/: db.sqlite3
hw_project/app_auth/: urls.py  views.py
hw_project/app_auth/templates/app_auth/: login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: author_info.html  base.html  index.html  new_author.html  new_quote.html  success.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py
