[tool.poetry]
name = "python-web-hw13.2"
version = "0.1.0"
description = ""
authors = ["Val <yermakvaleriy@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
